# CapstoneECS

./: .gitignore  CMakeLists.txt
src/: componentmanager.h  components.h  entity.h  entitymanager.h  main.cpp  systems.h
src/ui/: mainwindow.cpp  mainwindow.h  startwindow.cpp  startwindow.h  worldcreationwindow.cpp  worldcreationwindow.h
src/world/: Tile.cpp  Tile.h  WorldTile.cpp  WorldTile.h
